<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.calculadora.MainActivity">

    <item
        android:id="@+id/menu_sueldo"
        android:orderInCategory="1"
        android:title="@string/menu_sueldo"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_combustible"
        android:orderInCategory="2"
        android:title="@string/menu_combustible"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_orden_servicio"
        android:orderInCategory="3"
        android:title="@string/menu_orden_servicio"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>